--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Deploy Documentation
+name: Deploy Tests and Save JSON output
 
 # Controls when the action will run. Triggers the workflow on push
 on:
@@ -6,14 +6,9 @@ on:
     branches:
     - main
     paths:
-    - '*.md'
-    - 'biolink-model.ttl'
-    - 'biolink-model.owl'
-    - 'biolink-model.shex'
-    - 'about/*'
-    - 'context.jsonld'
+    - '.report.json'
   repository_dispatch:
-    types: trigger-build-documentation
+    types: trigger-run-tests
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -54,11 +49,11 @@ jobs:
       run: |
         python3 -m venv env
         source env/bin/activate
-        pip install linkml
-    - name: Build documentation
+        pip install -r requirements.txt
+    - name: run tests
       run: |
         source env/bin/activate
-        python script/jekyllmarkdowngen.py --yaml biolink-model.yaml --dir docs
+        pytest --json-report --json-report-summary -v tests/
     - name: Deploy to gh-pages branch
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
