--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         GITHUB_TOKEN: ${{ secrets.API_TOKEN }}
-        REPOSITORY_NAME: biolink/biolink-model # The repository the action should deploy to
+        REPOSITORY_NAME: sierra-moxon/testing # The repository the action should deploy to
         BRANCH: gh-pages # The branch the action should deploy to.
         COMMIT_MESSAGE: 'Update documentation'
         FOLDER: . # The folder the action should deploy.
